--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 # Open VSX Registry Access Token
 # Get yours at https://open-vsx.org/
 OVSX_TOKEN=your_token_here
+
+# VS Code Marketplace Access Token
+# Get yours at https://marketplace.visualstudio.com/manage
+VSCE_PAT=your_pat_here
