--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "repository": {
     "url": "https://github.com/chocolatedesue/vscode-pdf"
   },
-  "version": "1.2.0",
+  "version": "1.2.4",
   "browser": "./dist/main.js",
   "main": "./dist/main.js",
   "extensionKind": [
@@ -48,13 +48,16 @@
     ]
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "sh scripts/publish.sh"
   },
   "devDependencies": {
     "@actions/core": "^1.10.0",
     "@types/vscode": "^1.63.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "@vscode/vsce": "^3.7.1",
+    "ovsx": "^0.10.8",
+    "webpack": "^5.104.1",
+    "webpack-cli": "^6.0.1"
   },
   "dependencies": {
     "jszip": "^3.10.1"
